force-app/main/default/objects/WorkOrderSparesLine__c/WorkOrderSparesLine__c.object-meta.xml
<CustomObject>
    <label>Work Orders</label>
    <nameField>
        <displayFormat>WO-{00000}</displayFormat>
        <label>Work Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work OrdersLineItem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>