force-app/main/default/objects/WorkOrderSparesLine__c/fields/Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Quantity__c</fullName>
    <label>Available Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>