force-app/main/default/objects/WorkOrderSparesLine__c/fields/Contact_Person_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Mobile_Number__c</fullName>
    <label>Contact Person Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>