force-app/main/default/objects/WorkOrderSparesLine__c/fields/Diagram__c.field-meta.xml
<CustomField>
    <fullName>Diagram__c</fullName>
    <label>Diagram</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>