force-app/main/default/objects/WorkOrderSparesLine__c/fields/IGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount__c</fullName>
    <formula>TPrice__c  *  IGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>