force-app/main/default/objects/WorkOrderSparesLine__c/fields/Mill_Address__c.field-meta.xml
<CustomField>
    <fullName>Mill_Address__c</fullName>
    <label>Mill Address</label>
    <type>TextArea</type>
</CustomField>