force-app/main/default/objects/WorkOrderSparesLine__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Spare Description of Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>