force-app/main/default/objects/WorkOrderSparesLine__c/fields/RS_EA__c.field-meta.xml
<CustomField>
    <fullName>RS_EA__c</fullName>
    <label>RS/EA</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>