force-app/main/default/objects/WorkOrderSparesLine__c/fields/RS_SET__c.field-meta.xml
<CustomField>
    <fullName>RS_SET__c</fullName>
    <label>RS/SET</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>