force-app/main/default/objects/WorkOrderSparesLine__c/fields/Spare_Products__c.field-meta.xml
<CustomField>
    <fullName>Spare_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spare Products</label>
    <referenceTo>SpareLineItem__c</referenceTo>
    <relationshipLabel>Work OrdersLineItem</relationshipLabel>
    <relationshipName>Work_OrdersLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>