force-app/main/default/objects/WorkOrderSparesLine__c/fields/TPrice__c.field-meta.xml
<CustomField>
    <fullName>TPrice__c</fullName>
    <formula>(Quantity__c  *  RS_EA__c)-(Quantity__c * RS_EA__c* Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price Bases on EA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>