force-app/main/default/objects/WorkOrderSparesLine__c/fields/Work_Order_for_Spares__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_for_Spares__c</fullName>
    <label>Work Order for Spares</label>
    <referenceTo>Work_Order_for_Spares__c</referenceTo>
    <relationshipLabel>Work OrdersLineItem</relationshipLabel>
    <relationshipName>WorkOrderSparesLine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>