force-app/main/default/objects/WorkOrderSparesLine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MC_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Size__c</columns>
    <columns>Price__c</columns>
    <columns>Quantity__c</columns>
    <columns>Total_Price__c</columns>
    <columns>Required_On_or_Before__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>